--- a/2- spacex-webscraping.ipynb
+++ b/2- spacex-webscraping.ipynb
@@ -564,7 +564,7 @@
     "launch_dict= dict.fromkeys(column_names)\n",
     "\n",
     "# Remove an irrelvant column\n",
-    "# del launch_dict['Date andtime (UTC)']\n",
+    "del launch_dict['Date andtime (UTC)']\n",
     "\n",
     "# Let's initial the launch_dict with each value to be an empty list\n",
     "launch_dict['Flight No.'] = ['Flight No.']\n",
